fix(youtube):Refactor FlyoutUtils for improved functionality and updates
Refactored methods related to flyout button handling and added new functionality for handling comments and video IDs.